# savr

./: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  configure
R/: RcppExports.R  sav.R
cmake/: FindR.cmake
man/: read_sav_header.Rd  read_sav_region.Rd  stat_sav_file.Rd
src/: RcppExports.cpp  savr.cpp
